--- a/src/styles/Filters.css
+++ b/src/styles/Filters.css
@@ -28,6 +28,9 @@
     text-align: center;
     width: fit-content;
 }
+.filters-arrow svg {
+    margin: 0px 4px;
+}
 .filter-button {
     margin: 0px 10px;
     border: none;
