--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -20,10 +20,84 @@
 }
 .hero-background {
     width: 100%;
+    position: relative;
+}
+.hero-background h1 {
+    color: white;
+    position: absolute;
+    bottom: 15%;
+    left: 50px;
+    font-size: 50px;
 }
 .hero-background-image {
     width: 100%;
     height: 100%;
     max-height: 440px;
     min-height: 200px;
+}
+.history-container {
+    margin-left: 15px;
+}
+.add-coins-container,
+.history-container {
+     font-size: 20px;
+     margin: 0 20px;
+}
+.icon-add {
+    color: #ffcf00;
+    margin-right: 5px;
+}
+.icon-history {
+    color: tomato;
+    margin-right: 5px;
+}
+.points-container {
+    padding: 25px 0px;
+    margin: 0 20%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.points-container span {
+    padding: 10px 20px;
+    background-color: #ffcf00;
+    border-radius: 10px;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 0px 10px;
+}
+.points-updated-message {
+    padding: 10px 0px;
+    font-size: 30px;
+    text-align: center;
+    color: rgba(10, 212, 250, 0.86);
+    animation-name: fade;
+    animation-duration: 2s;
+}
+@keyframes fade {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+}
+@media screen and (max-width: 420px) {
+    .add-coins-container span{
+        display: none;
+    }
+    .history-container span{
+        display: none;
+    }
+    .icon-add,
+    .icon-history {
+        font-size: 25px;
+    }
+    .add-coins-container,
+    .history-container {
+     margin: 0 10px;
+    }
+    .hero-background h1 {
+        font-size: 25px;
+    }
 }
